Complete twits update endpoint (v1)

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 orbis_challenge/node_modules
 orbis_challenge_backend/node_modules
+orbis_challenge_backend/src/atlas.txt
+orbis_challenge_backend/src/config.js
