--- a/orbis_challenge_backend/package.json
+++ b/orbis_challenge_backend/package.json
@@ -3,22 +3,26 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "12.14.0",
+    "npm": "6.13.4"
+  },
   "scripts": {
-    "start": "npx nodemon --exec npx babel-node src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx nodemon --exec npx babel-node src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.19.0",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1"
-  },
-  "devDependencies": {
     "@babel/core": "^7.7.2",
     "@babel/node": "^7.7.0",
     "@babel/preset-env": "^7.7.1",
+    "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongodb": "^3.4.1"
+  },
+  "devDependencies": {
     "nodemon": "^1.19.4"
   }
 }
